--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.7.1",
     "react-scripts": "4.0.3",
     "stream-chat": "^4.1.0",
     "stream-chat-react": "^6.5.1",
